# integrityx-jwt

./: .gitignore  AUTO_FILL_TEST_PLAN.md  CLONE_AND_APPLY_JWT_GUIDE.md  COMPREHENSIVE_TEST_FILE.json  COPILOT_INSTRUCTIONS.md  DATABASE_SANITIZATION_TEST_PLAN.md  ENHANCED_INFORMATION_EXTRACTION.md  ENHANCED_TAMPER_DETECTION.md  GITHUB_README.md  IMPLEMENTATION_COMPLETE.md  Information.txt  JWT_IMPLEMENTATION_GUIDE.md  PROJECT_DOCUMENTATION.md  QUANTUM_SAFE_COMPARISON.md  QUANTUM_SAFE_IMPLEMENTATION_PLAN.md  QUANTUM_SAFE_IMPLEMENTATION_SUMMARY.md  QUANTUM_SAFE_TEST_FILE.json  README.md  SIMPLE_PROJECT_GUIDE.md  SIMPLE_TEST_FILE.json  TEST_FILES_GUIDE.md  app.py  deploy_jwt.sh  deploy_jwt_5min.sh  frontend-jwt-test.json  integrityx.db  middleware.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  sample-correct-loan.json  sample-data.csv  sample-document.txt  sample-final-loan.json  sample-loan-document.json  sample-perfect-loan.json  sample-simple.json  sample-test-upload.json  sample-valid-loan.json  (+13 more)
backend/: .env.example  ALEMBIC_README.md  Makefile  TEST_DOCUMENTATION.md  __init__.py  alembic.ini  app.db  demo_test.py  env.postgresql.example  generate_jwt_keys.py  integrityx.db  jwt_integration_demo.py  main.py  main_simple.py  pytest.ini  requirements-postgresql.txt  requirements-test.txt  run_tests.py  setup_postgresql.py  test-simple.json  test_accessibility_enhancements.py  test_attestations_provenance.py  test_audit_log_enhancements.py  test_database_service.py  test_error_drawer.py  test_health_endpoint.py  test_json_handler.py  test_models.py  (+13 more)
(+124 files in other folders)
